<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailMovie">

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/title_hint"/>

    <ImageView
        android:id="@+id/iv_detail_poster"
        android:layout_width="110dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/tv_detail_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_text"/>

    <TextView
        android:id="@+id/tv_detail_vote_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_text"/>

    <TextView
        android:id="@+id/tv_detail_vote_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="a"/>

    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:id="@+id/tv_detail_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/overview_hint"/>

</LinearLayout>