<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:scaleType="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/tv_title"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_release"/>

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_vote_a"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:maxEms="60"
            android:ellipsize="end"
            android:hint="@string/tv_overview"/>
    </LinearLayout>

</LinearLayout>